--- a/frontend/.gitattributes
+++ b/frontend/.gitattributes
@@ -1,1 +1,8 @@
-* text=auto eol=lf
+{
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "exclude": ["node_modules", "dist"]
+}
