--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
@@ -26,7 +27,9 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
-    "vite": "^5.4.10",
+    "tailwindcss": "^4.1.11",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.7"
   }
+  
 }
