--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vueform/slider": "^2.1.10",
     "axios": "^1.11.0",
     "pinia": "^3.0.3",
